--- a/biome.json
+++ b/biome.json
@@ -1,4 +1,7 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
-	"extends": ["@nedcloarbr/biome-config/nestjs", "@nedcloarbr/biome-config/ignore"]
+	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"extends": [
+		"@nedcloarbr/biome-config/nestjs",
+		"@nedcloarbr/biome-config/ignore"
+	]
 }
